# Android-Arm64-Project

./: README.md  gradlew  local.properties  settings.gradle
.github/workflows/: gradle-publish.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.S
app/src/main/java/com/example/assemblyhello/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-xxhdpi/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
